--- a/Address.properties
+++ b/Address.properties
@@ -1,6 +1,6 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/simdetails
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driverclassname=com.mysql.jdbc.Driver
 #you can edit MySQL username here
 spring.datasource.username=root
 #enter MySQL password here
