--- a/Address.properties
+++ b/Address.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/simdetails
+spring.datasource.url=jdbc:mysql://localhost:3306/Address
 spring.datasource.driverclassname=com.mysql.jdbc.Driver
 #you can edit MySQL username here
 spring.datasource.username=root
