--- a/Address.properties
+++ b/Address.properties
@@ -10,4 +10,5 @@ spring.jpa.database=MYSQL
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 
+eureka.client.service-url.defaultZone=http://localhost:5555/eureka
 
