--- a/Customer.properties
+++ b/Customer.properties
@@ -5,6 +5,7 @@ spring.datasource.username=root
 #enter MySQL password here
 spring.datasource.password=root
 spring.jpa.database=MYSQL
+eureka.client.service-url.defaultZone=http://localhost:5555/eureka
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
